--- a/asset/style/privacy.css
+++ b/asset/style/privacy.css
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  font-family: Arial, sans-serif;
+  
 }
 
 
@@ -95,7 +95,7 @@ body {
   background-color: #223459;
   color: white;
   padding: 40px 30px 20px;
-  font-family: Arial, sans-serif;
+  
 }
 
 .footer-container {
@@ -330,12 +330,10 @@ body {
   flex-wrap: wrap;
   justify-content: center;
   width: 100%;
-  background: #EEEEEE;
- box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  background: #fff;
   padding-left: 0;
   padding-right: 0;
   margin-bottom: 0px;
-box-shadow: #000;
 
 
 }
@@ -373,20 +371,6 @@ box-shadow: #000;
     justify-content: center;
     align-items: center;
     gap: 1rem; /* Better spacing between items */
-  }
-
-
-
-  /* Optional pipe separator */
-  .category-navbar .nav-item:not(:last-child)::after {
-    content: "|";
-    position: absolute;
-    right: -8px;
-    top: 50%;
-    transform: translateY(-50%);
-    color: #ccc;
-    font-size: 14px;
-    font-weight: normal;
   }
 }
 
