--- a/asset/style/wishlist.css
+++ b/asset/style/wishlist.css
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  font-family: Arial, sans-serif;
+  
 }
 
 
@@ -220,7 +220,7 @@ body {
   border: 1px solid #ccc;
   box-shadow: 0 0 8px rgba(0, 0, 0, 0.1);
   background-color: #fff;
-  font-family: Arial, sans-serif;
+  
   transition: box-shadow 0.3s ease;
 }
 
@@ -255,7 +255,8 @@ body {
 }
 
 .product-details h3 {
-  margin: 10px 0;
+
+  margin: 10px 2px !important;
   font-size: 16px;
   font-weight: bold;
   min-height: 32px !important;
@@ -590,12 +591,10 @@ overflow-x: auto;
   flex-wrap: wrap;
   justify-content: center;
   width: 100%;
-  background: #EEEEEE;
- box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  background: #fff;
   padding-left: 0;
   padding-right: 0;
   margin-bottom: 0px;
-box-shadow: #000;
 
 
 }
@@ -635,19 +634,6 @@ box-shadow: #000;
     gap: 1rem; /* Better spacing between items */
   }
 
-
-
-  /* Optional pipe separator */
-  .category-navbar .nav-item:not(:last-child)::after {
-    content: "|";
-    position: absolute;
-    right: -8px;
-    top: 50%;
-    transform: translateY(-50%);
-    color: #ccc;
-    font-size: 14px;
-    font-weight: normal;
-  }
 }
 
 .nav-btn.prev,
